--- a/LanchesC/appsettings.json
+++ b/LanchesC/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=LanchesC;Username=dev;Password=dev"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
